--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
   <title>Christmas Shopping</title>
+  <script src="navscript.js"></script>
 </head>
 <body>
   <div id="header">
     <h1>Cal´s Christmas Shopping</h1>
+    <button onclick="openNav()">Open Navigation</button>
   </div>
   <div id="nav">
     <ul>
