--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Christmas Shopping</title>
   <script src="navscript.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div id="header">
