--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 <body>
   <div id="header">
     <h1>Cal´s Christmas Shopping</h1>
-    <button onclick="openNav()">Open Navigation</button>
   </div>
-  <div id="nav">
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#blog">Blog</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
+  <div id="navigation">
+    <button id="nav-button">Menu</button>
+
+<nav id="nav-menu">
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</nav>
   </div>
   <div id="content">
     <h2>Test</h2>
