--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="header">
-    <h1>Cal´s Christmas Shopping</h1>
+    <h1>Cal's Christmas Shopping</h1>
   </div>
     
 <button id="nav-button">Menu</button>
