made changes to the navigation menu so that it works and doesnt error out

--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <html>
 <head>
   <title>Christmas Shopping</title>
-  <script src="navscript.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="scripts.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <div id="header">
     <h1>Cal's Christmas Shopping</h1>
   </div>
-    
-<button id="nav-button">Menu</button>
-
-<nav id="nav-menu">
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</nav>
+<div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
   <div id="content">
     <h2>Test</h2>
     <p>Test</p>
