--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Dropdown</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="#">Link 1</a>
+    <a href="#">My Connection to Greek Mythology</a>
     <a href="#">Link 2</a>
     <a href="#">Link 3</a>
   </div>
