--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <button onclick="myFunction()" class="dropbtn">Dropdown</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="#">My Connection to Greek Mythology</a>
-    <a href="#">Link 2</a>
+    <a href="#">Articles</a>
     <a href="#">Link 3</a>
   </div>
 </div>
