--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>Christmas Shopping</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <script src="scripts.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
