--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Christmas Shopping</title>
+  <title>What I Belive In, What I Follow.</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="scripts.js"></script>
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="header">
-    <h1>Cal's Christmas Shopping</h1>
+    <h1>What I Belive in, What I Follow</h1>
   </div>
 <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Dropdown</button>
@@ -25,7 +25,7 @@
     <h2>What I belive in, and what I follow.</h2>
     <p>Their are many religions out their, but all of them are unique and different in their own ways. I have, since a very young age, belived in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorperate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other...</p>
   </div>
-  <button onclick="window.location.href='https://cal-thedevgirl.github.io/Humanities-Project/what-i-belive-in.html'">Read More</button>
+  <button onclick="window.location.href='https://cal-thedevgirl.github.io/Humanities-Project/what-i-belive-in'">Read More</button>
 
 
 </body>
