changed redirect url

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1>Cal's Christmas Shopping</h1>
   </div>
 <div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <button onclick="myFunction()" class="dropbtn">Pages</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="#">My Connection to Greek Mythology</a>
-    <a href="#">Articles</a>
+    <a href="https://cal-thedevgirl.github.io/Humanities-Project">Home</a>
+    <a href="404err.txt">Articles</a>
     <a href="what-i-belive-in.html">What I Belive in, What I Follow</a>
   </div>
 </div>
