dropdown box changes

--- a/index.html
+++ b/index.html
@@ -6,19 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="scripts.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="code" type="text/html" href="dropdown.html">
 </head>
 <body>
   <div id="header">
     <h1>Cal's Christmas Shopping</h1>
   </div>
-<div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Pages</button>
-  <div id="myDropdown" class="dropdown-content">
-    <a href="https://cal-thedevgirl.github.io/Humanities-Project">Home</a>
-    <a href="404err.txt">Articles</a>
-    <a href="what-i-belive-in.html">What I Belive in, What I Follow</a>
-  </div>
-</div>
+
   
 
 <div id="content">
