--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -6,26 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="scripts.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="code" type="text/html" href="dropdown.html">
 </head>
 <body>
   <div id="header">
     <h1>What I Belive in, What I Follow</h1>
   </div>
-<div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-  <div id="myDropdown" class="dropdown-content">
-    <a href="#">My Connection to Greek Mythology</a>
-    <a href="#">Articles</a>
-    <a href="what-i-belive-in.html">What I Belive in, What I Follow</a>
-  </div>
-</div>
+
   
 
 <div id="content">
     <h2>What I belive in, and what I follow.</h2>
-    <p>Their are many religions out their, but all of them are unique and different in their own ways. I have, since a very young age, belived in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorperate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other...</p>
+    <p>Their are many religions out their, but all of them are unique and different in their own ways. I have, since a very young age, belived in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorperate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other religions and </p>
   </div>
-  <button onclick="window.location.href='https://cal-thedevgirl.github.io/Humanities-Project/what-i-belive-in'">Read More</button>
 
 
 </body>
