--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="scripts.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="code" type="text/html" href="dropdown.html">
+  <link href="dropdown.html" rel="import">
 </head>
 <body>
   <div id="header">
