fix html java dropdown thingy

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="scripts.js"></script>
-  <link href="dropdown.html" rel="import">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  
+  <div w3-include-html="dropdown.html"></div>
+  <script>
+    includeHTML();
+    </script>
 </head>
 <body>
   <div id="header">
