--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="scripts.js"></script>
-  <link href="dropdown.html" rel="import">
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <div w3-include-html="content.html"></div>
 </head>
 <body>
   <div id="header">
