--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -6,12 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="scripts.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <div w3-include-html="content.html"></div>
 </head>
 <body>
   <div id="header">
     <h1>What I Belive in, What I Follow</h1>
   </div>
+  <div w3-include-html="dropdown.html"></div>
+  <script>
+    includeHTML();
+    </script>
 
   
 
