--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <div id="header">
     <h1>Cal's Christmas Shopping</h1>
   </div>
+ 
   <div w3-include-html="dropdown.html"></div>
-  <script>
+ 
+ <script>
     includeHTML();
     </script>
   
@@ -22,7 +24,10 @@
     <h2>What I belive in, and what I follow.</h2>
     <p>Their are many religions out their, but all of them are unique and different in their own ways. I have, since a very young age, belived in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorperate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other...</p>
   </div>
-  <button onclick="window.location.href='https://cal-thedevgirl.github.io/Humanities-Project/what-i-belive-in.html'">Read More</button>
+
+  <div id="readmorebtn">
+    <button onclick="window.location.href='https://cal-thedevgirl.github.io/Humanities-Project/what-i-belive-in.html'">Read More</button>
+  </div>
 
 
 </body>
