--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
 
   <div id="readmorebtn">
-    <button onclick="window.location.href='https://cal-thedevgirl.github.io/Humanities-Project/what-i-belive-in.html'">Read More</button>
+    <button onclick="window.location.href='https://cal-thedevgirl.github.io/Humanities-Project/what-i-belive-in.html'"><p>Read More</p></button>
   </div>
 
 
