--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -25,7 +25,7 @@
     <li>Budism</li>
     <li>Norse Mythology</li>
     <li>Confusionism</li>
-    <li>shito</li>
+    <li>Shinto</li>
     <p>While Greek/Roman Mythology have pantheons of gods that control many aspecs of our universe I still belive that science has something to do with those fenomina even though the myths state that gods control them.</p>
   </div>
 
