--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
 
 <div id="content">
-    <h2>What I belive in, and what I follow.</h2>
+    <h3>What I belive in, and what I follow</h3>
     <p>Their are many religions out their, but all of them are unique and different in their own ways. I have, since a very young age, belived in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorperate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other...</p>
   </div>
 
