added images and css stylsheet call to article 1

--- a/dropdown.html
+++ b/dropdown.html
@@ -1,5 +1,5 @@
 <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn"><img src="/Humanities-Project/Images/menu.png" alt="Hamburger Icon"></button>
+        <button onclick="myFunction()" class="dropbtn"><img src="/Humanities-Project/Images/menu.png" alt="Hamburger Icon" style="width:500px;height:600px;"></button>
         <div id="myDropdown" class="dropdown-content">
           <a href="https://cal-thedevgirl.github.io/Humanities-Project">Home</a>
           <a href="404err.txt">Articles</a>
