--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -21,11 +21,17 @@
 <div id="content">
     <h2>What I belive in, and what I follow.</h2>
     <p>Their are many religions out their, but all of them are unique and different in their own ways. I have, since a very young age, belived in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorperate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other religions and combined them into my own "religion methodology". Some of the religions that i've taken aspects from include:</p>
+    <div id="Images">
+        <img src="/Humanities-Project/Images/javier-quiroga-QEqZDccvsPE-unsplash.jpg" alt="Greek Parthenon" style="width:500px;height:600px;">
+    </div>
     <li>Hinduism</li>
     <li>Budism</li>
     <li>Norse Mythology</li>
     <li>Confusionism</li>
     <li>Shinto</li>
+    <div id="Images">
+        <img src="/Humanities-Project/Images/elcarito-8kPgWovE68k-unsplash.jpg" alt="Roman Colosseum" style="width:500px;height:600px;">
+    </div>
     <p>While Greek/Roman Mythology have pantheons of gods that control many aspecs of our universe I still belive that science has something to do with those fenomina even though the myths state that gods control them.</p>
   </div>
 
