--- a/dropdown.html
+++ b/dropdown.html
@@ -1,5 +1,5 @@
 <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn"><img src="/Humanities-Project/Images/menu.png" alt="Hamburger Icon" style="width:50px;height:50px;border:0;margin:auto;"></button>
+        <button onclick="myFunction()" class="dropbtn"><img src="/Humanities-Project/Images/menu.png" alt="Hamburger Icon" style="width:50px;height:50px;border:0;margin:0%;"></button>
         <div id="myDropdown" class="dropdown-content">
           <a href="https://cal-thedevgirl.github.io/Humanities-Project">Home</a>
           <a href="404err.txt">Articles</a>
