--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -33,6 +33,22 @@
         <img src="/Humanities-Project/Images/elcarito-8kPgWovE68k-unsplash.jpg" alt="Roman Colosseum" style="width:300px;height:400px;">
     </div>
     <p>While Greek/Roman Mythology have pantheons of gods that control many aspecs of our universe I still belive that science has something to do with those fenomina even though the myths state that gods control them.</p>
+    <p>Many of the aspects that i've taken from religions, have mostly been related to something in Greek/Roman/Norse Mythology which I follow and study very heavily.</p>
+    <div id="mythbg">
+        <h3>
+            <b>
+                The Greek/Roman Creation Myth
+            </b>
+        </h3>
+        <p>
+            In the beginning there was Chaos, a yawning nothingness. Out of the void emerged Gaia (the Earth) and other divine beings — Eros (love), the Abyss (part of the underworld), and the Erebus (the unknowable place where death dwells). Without male assistance, Gaia gave birth to Uranus (the Sky), who then fertilized her.
+From that union the first Titans were born — six males: Coeus, Crius, Cronus, Hyperion, Iapetus, and Oceanus, and six females: Mnemosyne, Phoebe, Rhea, Theia, Themis, and Tethys. After Cronus (time) was born, Gaia and Uranus decreed no more Titans were to be born.
+Cronus castrated his father and threw the severed genitals into the sea, from which arose Aphrodite, goddess of love, beauty and sexuality. Cronus became the ruler of the gods with his sister-wife, Rhea, as his consort. The other Titans became his court. Because Cronus had betrayed his father, he feared that his offspring would do the same. So each time Rhea gave birth, Cronus snatched up the child and ate it. Rhea hated this and tricked him by hiding one child, Zeus, and wrapping a stone in a baby’s blanket so that Cronus ate the stone instead of the baby.
+When Zeus was grown, he fed his father a drugged drink, which caused Cronus to vomit, throwing up Rhea’s other children and the stone. Zeus then challenged Cronus to war for the kingship of the gods. At last Zeus and his siblings, the Olympians, were victorious, and the Titans were hurled down to imprisonment in the Abyss.
+Zeus was plagued by the same concern as his father had been and, after a prophecy that his first wife, Metis, would give birth to a god greater than he, he swallowed Metis. But she was already pregnant with Athena, and they both made him miserable until Athena, the goddess of wisdom, civilization and justice, burst from his head — fully grown and dressed for war. Zeus was able to fight off all challenges to his power and to remain the ruler of Mt. Olympus, the home of the gods.
+One son of Titans, Prometheus, did not fight with fellow Titans against Zeus and was spared imprisonment; he was given the task of creating man. Prometheus shaped man out of mud, and Athena breathed life into the clay figure. Prometheus made man stand upright as the gods did and gave him fire. Prometheus tricked Zeus, and to punish him, Zeus created Pandora, the first woman, of stunning beauty, wealth, and a deceptive heart and lying tongue. He also gave Pandora a box she was commanded never to open, but eventually her curiosity got the best of her, and she opened the box to release all kinds of evil, plagues, sorrows, and misfortunes, and also hope, which lay at the bottom of the box<p>(“GreekMythology”)</p>.
+        </p>
+    </div>
   </div>
 
 
