removed roman from creation myth title

--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -37,7 +37,7 @@
     <div id="mythbg">
         <h3>
             <b>
-                The Greek/Roman Creation Myth
+                The Greek Creation Myth
             </b>
         </h3>
         <p>
