added more content

--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -40,6 +40,7 @@
                 What I've Taken Away From Greek and Roman Mythology
             </b>
         </h3>
+        <p>I've taken a lot away from roman and greek mythology, I believe in both of their pantheons of gods/goddeses. Though the some of the powers they have I don't belive in. I've also taken aspects form Hinduism, like reincarnation, and good and bad karma.</p>
     </div>
     
   </div>
