--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -21,31 +21,29 @@
 
 <div id="content">
     <h2>What I belive in, and what I follow.</h2>
-    <p>Their are many religions out their, but all of them are unique and different in their own ways. I have, since a very young age, belived in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorperate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other religions and combined them into my own "religion methodology". Some of the religions that i've taken aspects from include:</p>
+    <p>There are many religions out there, but all of them are unique and different in their own ways. I have, since a very young age, believed in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorporate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other religions and combined them into my own "religion methodology". Some of the religions that i've taken aspects from include:</p>
     <div id="Images">
         <img src="/Humanities-Project/Images/javier-quiroga-QEqZDccvsPE-unsplash.jpg" alt="Greek Parthenon" class="centerimg">
     </div>
     <li>Hinduism</li>
-    <li>Budism</li>
+    <li>Buddhism</li>
     <li>Norse Mythology</li>
     <li>Confusionism</li>
     <li>Shinto</li>
     <div id="Images">
         <img src="/Humanities-Project/Images/elcarito-8kPgWovE68k-unsplash.jpg" alt="Roman Colosseum" class="centerimg">
     </div>
-    <p>While Greek/Roman Mythology have pantheons of gods that control many aspecs of our universe I still belive that science has something to do with those fenomina even though the myths state that gods control them.</p>
-    <p>Many of the aspects that i've taken from religions, have mostly been related to something in Greek/Roman/Norse Mythology which I follow and study very heavily.</p>
+    <p>While Greek/Roman Mythology has pantheons of gods that control many aspects of our universe I still believe that science has something to do with those phenomena even though the myths state that gods control them. Many of the aspects that I've taken from religions have mostly been related to something in Greek/Roman/Norse Mythology which I follow and study very heavily.</p>
     <div id="mythbg">
         <h3>
             <b>
                 What I've Taken Away From Greek and Roman Mythology
             </b>
         </h3>
-        <p>I've taken a lot away from roman and greek mythology, I believe in both of their pantheons of gods/goddeses. Though the some of the powers they have I don't belive in. I've also taken aspects form Hinduism, like reincarnation, and good and bad karma.</p>
+        <p>I've taken a lot away from roman and greek mythology, I believe in both of their pantheons of gods/goddeses. Though the some of the powers they have I don't belive in. I've also taken aspects form Hinduism, like reincarnation, and good and bad karma. Another religion that I’ve taken aspects from is Buddhism, one of the aspect from buddhism that I strongly agree with is: Anicca which is the process of the soul, constantly mutating through each re-incarnation, I find this aspect very interesting because while Greek and Roman mythology include an afterlife, they never explain what happens after, and I feel that this definition is what is missing from what Greek and Roman mythology define as the afterlife.</p>
+      <p>While I connect with Greek and Roman mythology heavily, there are some aspects from other religions that I think they should incorporate, but no religion is perfect, and every one of them has its pros and cons. I think if I continue to study religions that I could take an infinite amount of aspects from any religion. Everyone will take away different aspects that they like/connect with from different religions.</p>
     </div>
     
   </div>
-
-
 </body>
 </html>
