--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -43,7 +43,10 @@
         <p>I've taken a lot away from roman and greek mythology, I believe in both of their pantheons of gods/goddeses. Though the some of the powers they have I don't belive in. I've also taken aspects form Hinduism, like reincarnation, and good and bad karma. Another religion that I’ve taken aspects from is Buddhism, one of the aspect from buddhism that I strongly agree with is: Anicca which is the process of the soul, constantly mutating through each re-incarnation, I find this aspect very interesting because while Greek and Roman mythology include an afterlife, they never explain what happens after, and I feel that this definition is what is missing from what Greek and Roman mythology define as the afterlife.</p>
       <p>While I connect with Greek and Roman mythology heavily, there are some aspects from other religions that I think they should incorporate, but no religion is perfect, and every one of them has its pros and cons. I think if I continue to study religions that I could take an infinite amount of aspects from any religion. Everyone will take away different aspects that they like/connect with from different religions.</p>
     </div>
+
+    
     
   </div>
 </body>
+<div w3-include-html="footer.html"></div>
 </html>
