made changes to a multitude of code

--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,12 @@
 <div id="footer">
 <footer>
 <p>
-    This is a website that I programed form scratch with HTML, CSS, And JavaScript. This is my Final Humanities Project.
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    This is a website that I programed form scratch with HTML, CSS, And JavaScript
 </p>
 </footer>
 </div>
