--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id="header">
-    <h1><a href="https://cal-thedevgirl.github.io/Humanities-Project/">Cal's Christmas Shopping</a></h1>
+    <h1>Cal's Christmas Shopping</h1>
   </div>
  
   <div w3-include-html="dropdown.html"></div>
