--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="header">
-    <h1><a href="https://cal-thedevgirl.github.io/Humanities-Project/">What I Belive in, What I Follow</a></h1>
+    <h1>What I Belive in, What I Follow</h1>
   </div>
   <div w3-include-html="dropdown.html"></div>
   <script>
