changed css for image

--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -34,7 +34,7 @@
                 What I've Taken Away From Greek and Roman Mythology
             </b>
         </h3>
-        <div id="images">
+        <div id="Images">
             <img src="Images/greek_pantheon.png" alt="all of the greek gods">
         </div>
         <p>I've taken a lot away from roman and greek mythology, I believe in both of their pantheons of gods/goddeses. Though the some of the powers they have I don't belive in. I've also taken aspects form Hinduism, like reincarnation, and good and bad karma. Another religion that I’ve taken aspects from is Buddhism, one of the aspect from buddhism that I strongly agree with is: Anicca which is the process of the soul, constantly mutating through each re-incarnation, I find this aspect very interesting because while Greek and Roman mythology include an afterlife, they never explain what happens after, and I feel that this definition is what is missing from what Greek and Roman mythology define as the afterlife.</p>
