made changes to the content

--- a/what-i-belive-in.html
+++ b/what-i-belive-in.html
@@ -17,29 +17,10 @@
     includeHTML();
     </script>
 
-  
-
 <div id="content">
-    <h2>What I belive in, and what I follow.</h2>
-    <p>There are many religions out there, but all of them are unique and different in their own ways. I have, since a very young age, believed in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorporate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other religions and combined them into my own "religion methodology". Some of the religions that i've taken aspects from include:</p>
-    <li>Hinduism</li>
-    <li>Buddhism</li>
-    <li>Norse Mythology</li>
-    <li>Confusionism</li>
-    <li>Shinto</li>
-    <p>While Greek/Roman Mythology has pantheons of gods that control many aspects of our universe I still believe that science has something to do with those phenomena even though the myths state that gods control them. Many of the aspects that I've taken from religions have mostly been related to something in Greek/Roman/Norse Mythology which I follow and study very heavily.</p>
-    <div id="mythbg">
-        <h3>
-            <b>
-                What I've Taken Away From Greek and Roman Mythology
-            </b>
-        </h3>
-        <div id="Images">
-            <img src="Images/greek_pantheon.png" alt="all of the greek gods">
-        </div>
-        <p>I've taken a lot away from roman and greek mythology, I believe in both of their pantheons of gods/goddeses. Though the some of the powers they have I don't belive in. I've also taken aspects form Hinduism, like reincarnation, and good and bad karma. Another religion that I’ve taken aspects from is Buddhism, one of the aspect from buddhism that I strongly agree with is: Anicca which is the process of the soul, constantly mutating through each re-incarnation, I find this aspect very interesting because while Greek and Roman mythology include an afterlife, they never explain what happens after, and I feel that this definition is what is missing from what Greek and Roman mythology define as the afterlife.</p>
-      <p>While I connect with Greek and Roman mythology heavily, there are some aspects from other religions that I think they should incorporate, but no religion is perfect, and every one of them has its pros and cons. I think if I continue to study religions that I could take an infinite amount of aspects from any religion. Everyone will take away different aspects that they like/connect with from different religions.</p>
-    </div>
+    <h2><b>What I believe in, and What I Follow</b></h2>
+    <p>There are many religions out there, but all of them are unique and different in their own ways. I have, since a very young age, believed in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorporate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other religions and combined them into my own "religion methodology". Some of the religions that I've taken aspects from include: Hinduism, Buddhism, Norse Mythology, Confucianism, and Shinto.<br> While Greek/Roman Mythology has pantheons of gods that control many aspects of our universe I still believe that science has something to do with those phenomena even though the myths state that gods control them. Many of the aspects that I've taken from religions have mostly been related to something in Greek/Roman/Norse Mythology. But there have been some aspects that I have taken out of religions that have nothing to do with Greek/Roman/Norse myths.<br/> I've taken a lot away from roman and greek mythology, I believe in both of their pantheons of gods/goddesses. I've also taken aspects from Hinduism, like reincarnation, and good and bad karma. Another religion that I’ve taken aspects from is Buddhism, one of the aspect from buddhism that I strongly agree with is: Anicca which is the process of the soul, constantly mutating through each re-incarnation, I find this aspect very interesting because while Greek and Roman mythology include an afterlife, they never explain what happens after, and I feel that this definition is what is missing from what Greek and Roman mythology define as the afterlife.<br> While I connect with Greek and Roman mythology heavily, there are some aspects from other religions that I think they should incorporate, but no religion is perfect, and every one of them has its pros and cons. I think if I continue to study religions that I could take an infinite amount of aspects from any religion. Everyone will take away different aspects that they like/connect with from different religions.</p>
+</div>
 
     
     
