--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <p>Their are many religions out their, but all of them are unique and different in their own ways. I have, since a very young age, belived in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorperate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other...</p>
   </div>
 
-  <div id="readmorebtn">
-    <button onclick="window.location.href='https://cal-thedevgirl.github.io/Humanities-Project/what-i-belive-in.html'"><p>Read More</p></button>
-  </div>
+
+    <button onclick="window.location.href='https://cal-thedevgirl.github.io/Humanities-Project/what-i-belive-in.html'" class="readmorebtn">Read More</button>
+
 
 
 </body>
