fixed conted duplication problem

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div id="content">
     <h3>What I belive in, and what I follow</h3>
-    <p>There are many religions out there, but all of them are unique and different in their own ways. I have, since a very young age, believed in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorporate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of others...There are many religions out there, but all of them are unique and different in their own ways. I have, since a very young age, believed in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorporate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of other...</p>
+    <p>There are many religions out there, but all of them are unique and different in their own ways. I have, since a very young age, believed in Greek/Roman Mythology as a whole. Though as I grew older I started hearing and reading about even more what religion means to other people and how they incorporate it into their daily lives. While I do Follow Greek/Roman Mythology, I have also taken different aspects of others...</p>
   </div>
 
 
